<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <View
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:background="@drawable/main_title"
            android:id="@+id/title_view1"
    />
    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textSize="36sp"
            android:textColor="@color/colorTitleText"
            app:layout_constraintEnd_toEndOf="@+id/title_view1"
            app:layout_constraintBottom_toBottomOf="@+id/title_view1"
            app:layout_constraintTop_toTopOf="@id/title_view1"
            app:layout_constraintStart_toStartOf="@id/title_view1"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintVertical_bias="0.8"
            android:id="@+id/title_text1"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_view1"
            app:layout_constraintBottom_toBottomOf="@id/end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.5"
            android:text="@string/start"
            android:textSize="24sp"
            android:id="@+id/start"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.3"
            android:text="@string/exit"
            android:textSize="24sp"
            android:id="@+id/end"
    />
</android.support.constraint.ConstraintLayout>